Adicionei novo parágrafo

--- a/Site-Exemplo/Index.html
+++ b/Site-Exemplo/Index.html
@@ -10,5 +10,9 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut rerum, consectetur laboriosam corrupti ea quos laudantium? Necessitatibus, vitae! Excepturi debitis, nam laborum iste velit culpa officiis deleniti sint facere obcaecati.</p>
+
+    <P>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit labore eius hic temporibus itaque sunt eligendi sit. Consectetur, ratione dicta! Eaque ab molestias obcaecati veniam itaque at atque beatae sint?
+    </P>
 </body>
 </html>
